# conpyg

./: .gitignore  README.md  pyproject.toml
conpyg/: __init__.py  core.py
tests/: conftest.py  test_cli.py  test_dot_access.py  test_io.py  test_merge.py  test_pretty.py
